test/src/e2e_vm_tests/test_programs/should_pass/language/const_decl_in_library/src/moon.sw
library;

pub const WE_WERE_NEVER_HERE: bool = true;
