test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_module/src/main.sw
library;

pub const A: u8 = B;
pub const B: u8 = A;

pub const X: u8 = Y;
pub const Y: u8 = Z;
pub const Z: u8 = X;